# ratatoskr-gui

./: .gitignore  CMakeLists.txt  README.md
cmake/: cmake_uninstall.cmake.in
data/: ratatoskr-gui.desktop
src/: deviceproxy.cpp  deviceproxy.h  main.cpp  pulseaudiosource.cpp  pulseaudiosource.h
src/qml/: EqPanel.qml  Main.qml  SettingsPanel.qml  StatusBar.qml  StreamPanel.qml  VolumePanel.qml
